Project

General

Profile

Actions

Bug #15376

closed

ceph-objectstore-tool --data-path relative path with bluestore fails

Added by David Zafman about 8 years ago. Updated almost 8 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
David Zafman
Category:
-
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

$ ./ceph-objectstore-tool --data-path dev/osd0 --op list
Mount failed with '(5) Input/output error'
$ ./ceph-objectstore-tool --data-path /home/user/ceph/src/dev/osd0 --op list
["1.7",{"oid":"benchmark_data_TrustyTahr_130751_object71","key":"","snapid":-2,"hash":4282519559,"max":0,"pool":1,"namespace":"","max":0}]
....

Actions #1

Updated by David Zafman about 8 years ago

Using --debug with ceph-objectstore-tool shows logging of the issue.

Actions #2

Updated by Sage Weil about 8 years ago

  • Status changed from New to 7
Actions #3

Updated by David Zafman almost 8 years ago

  • Status changed from 7 to Resolved

25d80078e2e2ebb040c48ffab25483a585cd6784

Actions

Also available in: Atom PDF